# endpoints/members.go
@@ -27,7 +27,7 @@ func HandleMembersAdd(logger *zap.SugaredLogger, quotaManager *backend.QuotaMana
 
 				// Add the member quota-group to the quota-group.
 				if err = group.AddGroup(memberGroup); err != nil {
-					return memberRequestFailure(err, groupName, logger, memberGroup, "quota-group")
+					return memberFailure(true, err, groupName, logger, memberGroup, "quota-group")
 				}
 			}
 
@@ -36,7 +36,7 @@ func HandleMembersAdd(logger *zap.SugaredLogger, quotaManager *backend.QuotaMana
 
 				// Add the member snap to the quota-group.
 				if err = group.AddGroup(snap); err != nil {
-					return memberRequestFailure(err, groupName, logger, snap, "snap")
+					return memberFailure(true, err, groupName, logger, snap, "snap")
 				}
 			}
 		}
@@ -45,11 +45,49 @@ func HandleMembersAdd(logger *zap.SugaredLogger, quotaManager *backend.QuotaMana
 	}
 }
 
+// HandleMemberDelete TODO
+func HandleMembersDelete(logger *zap.SugaredLogger, quotaManager *backend.QuotaManager) api.GroupMembersDeleteHandlerFunc {
+	return func(params api.GroupMembersDeleteParams) middleware.Responder {
+
+		// Iterate through the map of quota-groups to members.
+		var err error
+		for groupName, members := range params.GroupMembers {
+
+			// Get the group from the quota manager.
+			group := quotaManager.GetGroup(groupName)
+
+			// Iterate through the member quota-groups.
+			for _, memberGroup := range members.SubGroups {
+
+				// Add the member quota-group to the quota-group.
+				if err = group.RemoveGroup(memberGroup); err != nil {
+					return memberFailure(false, err, groupName, logger, memberGroup, "quota-group")
+				}
+			}
+
+			// Iterate through the member snaps.
+			for _, snap := range members.Snaps {
+
+				// Add the member snap to the quota-group.
+				if err = group.RemoveSnap(snap); err != nil {
+					return memberFailure(false, err, groupName, logger, snap, "snap")
+				}
+			}
+		}
+
+		return &api.GroupMembersDeleteOK{}
+	}
+}
+
 // memberAddRequestFailure TODO
-func memberRequestFailure(err error, groupName string, logger *zap.SugaredLogger, memberName, memberType string) (resp *api.GroupMembersAddDefault) {
+func memberFailure(addMember bool, err error, groupName string, logger *zap.SugaredLogger, memberName, memberType string) middleware.Responder {
 
 	// Log the error.
-	message := fmt.Sprintf("Failed to add member \"%s\" to the quota-group.", memberName)
+	operation := "add"
+	if !addMember {
+		operation = "delete"
+	}
+	message := fmt.Sprintf("Failed to %s member \"%s\".", operation, memberName)
 	logger.Infow(message,
 		"quota-group", groupName,
 		"memberName", memberName,
@@ -59,11 +97,22 @@ func memberRequestFailure(err error, groupName string, logger *zap.SugaredLogger
 
 	// Create the response back to the client.
 	code := 500
-	resp = &api.GroupMembersAddDefault{Payload: &models.Error{
+	errPayload := &models.Error{
 		Code:    int64(code),
 		Message: message,
-	}}
-	resp.SetStatusCode(code)
+	}
 
+	// Decide which Go type to return.
+	if !addMember {
+		resp := &api.GroupMembersDeleteDefault{
+			Payload: errPayload,
+		}
+		resp.SetStatusCode(code)
+		return resp
+	}
+	resp := &api.GroupMembersAddDefault{
+		Payload: errPayload,
+	}
+	resp.SetStatusCode(code)
 	return resp
 }
